styles.css
/* CSS BY ASHLYN FIRLIK */

/* IMPORTED FONTS */
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

/* CSS RESET */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* ROOT VARIABLES */
:root {
--midnight-blue: #1F2A44;
--olive-green: #76885B;
--champagne-gold: #E5C185;
--linen: #F8F4EC;
--dark-charcoal: #2B2B2B;
--soft-white: #FAF9F6;
}

/* GLOBAL STYLES */
section:nth-of-type(4) {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
}

/* MEDIA QUERY (medium) */
@media (min-width: 600px) {
    section:nth-of-type(4) {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
    section:nth-of-type(2) {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
    section:nth-of-type(2) > h2 {
        grid-column: 1/-1;
    }
    section:nth-of-type(2) > div:nth-of-type(3) {
        grid-column: 1/-1;
        justify-content: center;
    }
}

/* MEDIA QUERY (large) */
@media (min-width: 900px) {
    section:nth-of-type(4) {
        grid-template-columns: repeat(3, 1fr);
    }
    section:nth-of-type(2) {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
    section:nth-of-type(2) > h2 {
        grid-column: 1/-1;
    }
    section:nth-of-type(2) > div:nth-of-type(3) {
        grid-column: 1/-1;
        justify-content: center;
    }
}

/* MEDIA QUERY (xl) */
@media (min-width: 1200px) {
    section:nth-of-type(4) {
        grid-template-columns: repeat(5, 1fr);
    }
    section:nth-of-type(2) {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
    section:nth-of-type(2) > h2 {
        grid-column: 1/-1;
    }
    section:nth-of-type(2) > div:nth-of-type(3) {
        grid-column: 1/-1;
        justify-content: center;
    }
}

header {
    background-color: var(--midnight-blue);
    color: var(--linen);
    text-align: center;
}

header p {
    padding-top: 30px;
    padding-bottom: 35px;
    font-size: 1.2rem;
    font-style: italic;
    font-weight: lighter;
}

header img {
    display: block;
    margin: 0 auto;
    max-width: 30%;
    padding-top: 25px;
}

h1 {
    font-size: 3.8rem;
    padding-top: 20px;
    font-weight: bold;
}

h2 {
    font-size: 2.2rem;
    font-weight: lighter;
    color: var(--midnight-blue)
}

h3 {
    color: var(--linen);
    font-size: 1.8rem;
    font-weight: bold;
    padding: 1rem;
}

nav {
    background-color: var(--champagne-gold);
    padding: 1em;
}

nav a {
    text-decoration: none;
    color: var(--midnight-blue);
    font-size: 1.6rem;
    font-weight: bold;
}

nav ul {
    display: flex;
    justify-content: space-evenly;
}

body {
    font-family: playfair display;
}

section:first-of-type {
    max-width: 95%;
    margin: 0 auto;
}

section:first-of-type > h2 {
    padding-top: 70px;
    padding-bottom: 10px;
}

section:first-of-type > p {
    line-height: 1.8rem;
    margin-bottom: 1.6rem;
    font-size: 1.2rem;
}

section:nth-of-type(2) {
    border-top: 2px solid var(--champagne-gold);
    border-bottom: 2px solid var(--champagne-gold);
    max-width: 95%;
    margin: 0 auto;
    display: grid;
    gap: 1rem;
}

section:nth-of-type(2) > div {
    background-color: var(--olive-green);
    border-radius: 0.5rem;
}

section:nth-of-type(2) > div > p {
    line-height: 1.5rem;
    padding: 1rem;
}

section:nth-of-type(2) > div > ul {
    line-height: 1.5rem;
    padding: 1rem;
}

footer {
    background-color: var(--midnight-blue);
}

